# boidsGL

./: .gitignore  CMakeLists.txt  README.md
include/: boids.h  boids.hpp  constants.h  constants.hpp  gl_func.h  gl_func.hpp  vec.hpp
src/: CMakeLists.txt  boids.h  constants.h  gl_func.h  main.cpp  sdl_func.h  timing.cpp  vec.h
src/base/: boids.cpp
src/openMP/: boids.cpp
